src/snapshots/raoul__tests__run_vm_is_error@recursion.ra.snap
---
source: src/tests.rs
expression: res.unwrap_err()
input_file: src/examples/invalid/dynamic/recursion.ra
---
Stack overflow!
