src/snapshots/raoul__tests__run_vm_is_error@unexistant-column.ra.snap
---
source: src/tests.rs
expression: res.unwrap_err()
input_file: src/examples/invalid/dynamic/unexistant-column.ra
---
Invalid column
