src/snapshots/raoul__tests__run_vm_is_error@unexistant-data-frame.ra-2.snap
---
source: src/tests.rs
expression: vm.messages
input_file: src/examples/invalid/dynamic/unexistant-data-frame.ra
---
[]
