src/snapshots/raoul__tests__run_vm_is_error@unexistant-data-frame.ra.snap
---
source: src/tests.rs
expression: res.unwrap_err()
input_file: src/examples/invalid/dynamic/unexistant-data-frame.ra
---
Could not read the file
