src/snapshots/raoul__tests__run_vm_is_error@unitialized-element.ra-2.snap
---
source: src/tests.rs
expression: vm.messages
input_file: src/examples/invalid/dynamic/unitialized-element.ra
---
[]
