src/snapshots/raoul__tests__run_vm_is_error@unitialized-element.ra.snap
---
source: src/tests.rs
expression: res.unwrap_err()
input_file: src/examples/invalid/dynamic/unitialized-element.ra
---
Found initialized value
