src/snapshots/raoul__tests__run_vm_is_error@used-before.ra.snap
---
source: src/tests.rs
expression: res.unwrap_err()
input_file: src/examples/invalid/dynamic/used-before.ra
---
Found initialized value
