src/snapshots/raoul__tests__run_vm_is_ok-10.snap
---
source: src/tests.rs
expression: vm.messages
---
[
    "Array 'a'",
    "\n",
    "1",
    "\n",
    "2",
    "\n",
    "3",
    "\n",
    "Array 'b'",
    "\n",
    "1",
    "\n",
    "2",
    "\n",
    "3",
    "\n",
    "1",
    "\n",
    "2",
    "\n",
    "3",
    "\n",
    "Array 'c'",
    "\n",
    "0",
    "\n",
    "1",
    "\n",
    "2",
    "\n",
    "Array 'd'",
    "\n",
    "0",
    "\n",
    "1",
    "\n",
    "2",
    "\n",
    "3",
    "\n",
]
