src/snapshots/raoul__tests__run_vm_is_ok-2.snap
---
source: src/tests.rs
expression: vm.messages
---
[
    "1",
    "1",
    "my string",
    "false",
    "\n",
]
