src/snapshots/raoul__tests__run_vm_is_ok-3.snap
---
source: src/tests.rs
expression: vm.messages
---
[
    "1",
    "2",
    "3",
    "2",
    "1",
    "\n",
]
